--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,7 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
   
 [[main]]
-  name = "FAQs"
+  name = "Begin"
   url = "FAQs"
   weight = 20
  
