--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,8 +4,8 @@
 #   The weight parameter defines the order that the links will appear in.
   
 [[main]]
-  name = "Begin"
-  url = "FAQs"
+  name = "Start Here"
+  url = "start-here"
   weight = 20
  
 [[main]]
