--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -40,7 +40,7 @@
 [[main]]
   name = "The Wedding"
   parent = "Wedding Planning"
-  url = "wedding-mass"
+  url = "the-wedding"
   weight = 40    
   
 [[main]]
