--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -50,9 +50,9 @@
   weight = 50
   
 [[main]]
-  name = "Learn More"
+  name = "All Resources"
   parent = "Wedding Planning"
-  url = "history"
+  url = "all-resources"
   weight = 60    
 
 # Link to a PDF of your resume/CV from the menu.
