--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -60,6 +60,9 @@ office_hours = "" # ["Monday 10:00 to 13:00", "Wednesday 09:00 to 10:00"]
 # Enter an optional link for booking appointments (e.g. calendly.com).
 appointment_url = ""
 
+# Address format (choose from the [address_formats] list below or add you own to the list).
+address_format = "en-us"
+
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
@@ -177,3 +180,19 @@ sharing = true
   [comments.disqus]
     shortname = ""  # Paste the shortname from your Disqus dashboard.
     show_count = true  # Show comment count in page header? (true/false)
+    
+  # Available address formats.
+[address_formats]
+  en-us = {order = ['street', 'city', 'region', 'postcode'], delimiters = [', ', ', ', ' ', '']}
+  en-gb = {order = ['street', 'city', 'region', 'postcode'], delimiters = [', ', ', ', ', ', '']}
+  zh = {order = ['postcode', 'region', 'city', 'street'], delimiters = [' ', ' ', ' ', '']}  
+  
+# Main menu alignment (l = left, c = center, r = right) and logo options.
+main_menu = {align = "l", show_logo = true}  
+
+############################
+## Marketing
+############################
+[marketing]
+  google_analytics = "UA-144733098-1"
+  google_tag_manager = ""
