--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -17,11 +17,16 @@
   name = "Planning"
   url = "#planning"
   weight = 40  
+  
+[[main]]
+  name = "Posts"
+  url = "#posts"
+  weight = 50    
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 50
+  weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
