--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -5,18 +5,18 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Latin Mass Wedding"
+title = "Latin Mass Baptism"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://www.latinmasswedding.com/"
+baseurl = "https://www.latinmassbaptism.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
 copyright = "&copy; {year} Sharon Kabel"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = "UA-144733098-1"
+googleAnalytics = ""
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
