--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -46,9 +46,10 @@ time_format = "3:04 PM"
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = ""
-phone = ""
-address = {} # {street = "450 Serra Mall", city = "Stanford", region = "CA", postcode = "94305", country = "United States", country_code = "US"}
+email_form = 0
+# email = ""
+# phone = ""
+# address = {} # {street = "450 Serra Mall", city = "Stanford", region = "CA", postcode = "94305", country = "United States", country_code = "US"}
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
 office_hours = "" # ["Monday 10:00 to 13:00", "Wednesday 09:00 to 10:00"]
