--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -45,6 +45,12 @@ time_format = "3:04 PM"
 ## Contact Widget setup   ##
 ############################
 
+# Enter contact details (optional). To hide a field, clear it to "".
+email_form = 0
+email = ""
+phone = ""
+address = {} # {street = "450 Serra Mall", city = "Stanford", region = "CA", postcode = "94305", country = "United States", country_code = "US"}
+
 # Address format (choose from the [address_formats] list below or add you own to the list).
 address_format = "en-us"
 
