--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -46,7 +46,7 @@ time_format = "3:04 PM"
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email_form = "0"
+email = ""
 
 # Address format (choose from the [address_formats] list below or add you own to the list).
 address_format = "en-us"
