--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@
 
 # Color theme.
 #   Choose from `default`, `ocean`, `forest`, `dark`, `apogee`, `1950s`, `coffee`, `cupcake`, `strawberry`.
-theme = "forest"
+theme = "white"
 # Enable users to switch between day and night mode?
 day_night = true
 
