--- a/data/themes/white.toml
+++ b/data/themes/white.toml
@@ -8,11 +8,11 @@ light = true
 primary = "#4A235A"
 
 # Menu
-menu_primary = "#A569BD" # 500
+menu_primary = "#4A235A" # 500
 menu_text = "#fff"
-menu_text_active = "#4A235A" # A100
+menu_text_active = "#A569BD" # A100
 menu_title = "#fff"
 
 # Home sections
 home_section_odd = "rgb(255, 255, 255)"
-home_section_even = "rgb(255, 255, 175)"
+home_section_even = "rgb(222, 222, 217)"
