--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -25,9 +25,6 @@ disqusShortname = ""
 ## Advanced options below ##
 ############################
 
-# Name of Academic theme folder in `themes/`.
-theme = "academic"
-
 # Get last modified date for content from Git?
 enableGitInfo = false
 
@@ -77,3 +74,7 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   category = "categories"
   publication_type = "publication_types"
   author = "authors"
+
+[module]
+  [[module.imports]]
+    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
