--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -46,7 +46,7 @@ time_format = "3:04 PM"
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "latinmasswedding@gmail.com"
+email = ""
 
 # Address format (choose from the [address_formats] list below or add you own to the list).
 address_format = "en-us"
@@ -172,7 +172,7 @@ main_menu = {align = "l", show_logo = true}
 ## Marketing
 ############################
 [marketing]
-  google_analytics = "UA-144733098-1"
+  google_analytics = "250413886"
   # google_tag_manager = ""
 
 # Link authors to their profile page? (true/false)
