--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -77,5 +77,19 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 
 # Modules.
 [module]
-  [[module.imports]]
-    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
+#  [[module.imports]]
+#    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
+[[module.imports]]
+path = "github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify-cms"
+
+[[module.imports]]
+path = "github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify"
+
+[[module.imports]]
+path = "github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-reveal"
+
+[[module.imports]]
+path = "github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy/v5"
+
+[security.funcs]
+getenv = [ "^HUGO_", "^WC_" ]
