try 'ocean' theme

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,8 +5,8 @@
 #   Choose from `default`, `ocean`, `forest`, `dark`, `apogee`, `1950s`, `coffee`, `cupcake`, `strawberry`.
 # theme = "black"
 # Enable users to switch between day and night mode?
-theme_day = "black"
-theme_night = "black"
+theme_day = "ocean"
+theme_night = "ocean"
 day_night = true
 
 # Font style.
