--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,8 +6,8 @@
 # theme = "black"
 # Enable users to switch between day and night mode?
 [appearance]
-theme_day = "black"
-theme_night = "black"
+theme_day = "ocean"
+theme_night = "ocean"
 day_night = true
 
 # Font style.
